[tool.poetry]
name = "my_hackathon_bot"
version = "0.1.0"
description = ""
authors = ["DevBoost1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
telebot = "^0.0.5"
ipython = "^8.26.0"
pillow = "^10.4.0"
pymongo = "^4.8.0"
pytest = "^8.3.2"
matplotlib = "^3.9.1"
autocorrect = "^2.6.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
